--- a/index.html
+++ b/index.html
@@ -8,16 +8,13 @@
 </head>
 <body class="page">
   <header class="header">
-    <picture class="header__image">
-      <source srcset="./images/header-logoS.svg" media="(max-width: 425px)">
-      <img src="./images/header-logo.svg" alt="Контурное изображение карты с подписью Россия">
-    </picture>
-    <div class="header__links">
-      <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
-      <a class="header__lang-link" href="#">En</a>
-    </div>            
+    <img class="header__image" src="./images/header-logo.svg" alt="Контурное изображение карты с подписью Россия">
+    <ul class="header__links">
+      <li><a class="header__lang-link header__lang-link_active" href="#">Ru</a></li>
+      <li><a class="header__lang-link" href="#">En</a></li>
+    </ul>            
   </header>
-  <main class="content">
+  <main>
     <section class="lead">
       <h1 class="lead__title">Путешествия по&nbsp;России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
@@ -25,26 +22,22 @@
       <p class="lead__caption">ваша полка — верхняя</p>
     </section>
     <section class="intro">
-      <div class="intro__container">
-        <div class="intro__article">
-          <h2 class="intro__title">Чего мы там не&nbsp;видели?</h2>
-          <p class="intro__text">
-          По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной 
-          стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, 
-          густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету,
-           загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла 
-          в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали 
-          и описали некоторые интересные места, достойные вашего отпуска.
-          </p>
-          <ul class="intro__list">
-            <li>Часовых поясов <span class="intro__list-amount">11</span></li>
-            <li>Объектов природного наследия ЮНЕСКО <span class="intro__list-amount">12</span></li>
-            <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list-amount">16</span></li>
-            <li>Природных заповедников <span class="intro__list-amount">105</span></li>
-            <li>Аэропортов <span class="intro__list-amount">241</span></li>
-          </ul>
-        </div>
-      </div>
+      <h2 class="intro__title">Чего мы там не&nbsp;видели?</h2>
+      <p class="intro__text">
+        По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной 
+        стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, 
+        густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету,
+        загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла 
+        в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали 
+        и описали некоторые интересные места, достойные вашего отпуска.
+      </p>
+      <ul class="intro__list">
+        <li>Часовых поясов <span class="intro__list-amount">11</span></li>
+        <li>Объектов природного наследия ЮНЕСКО <span class="intro__list-amount">12</span></li>
+        <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list-amount">16</span></li>
+        <li>Природных заповедников <span class="intro__list-amount">105</span></li>
+        <li>Аэропортов <span class="intro__list-amount">241</span></li>
+      </ul>
     </section>
     <section class="photo-grid">
       <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Окно поезда">
@@ -62,7 +55,7 @@
     </section>
     <section class="places">
       <article class="place">
-        <h3 class="place__title place__title_letters">Куршская коса</h3>
+        <h2 class="place__title">Куршская коса</h2>
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
@@ -70,17 +63,17 @@
         <img class="place__image" src="./images/place-kosa.jpg" alt="Фото прибрежной части Куршского залива">
         <div class="place__paragraph">
           <p class="place__paragraph-text">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть 
-                два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого 
-                рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского 
-                анклава.</p>
+            два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого 
+            рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского 
+            анклава.</p>
           <p class="place__paragraph-text">На этом Калининградская область не заканчивается. Для&nbsp;путешественника и исследователя там же по соседству — самая западная точка&nbsp;России, 
-                Балтийская коса, — и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера 
-                здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного 
-                моря.</p> 
+            Балтийская коса, — и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера 
+            здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного 
+            моря.</p> 
         </div>
       </article>
       <article class="place">
-        <h3 class="place__title">Кольский</h3>
+        <h2 class="place__title">Кольский</h2>
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
@@ -88,18 +81,18 @@
         <img class="place__image" src="./images/place-kolsky.jpg" alt="Горный массив Хибины зимой">
         <div class="place__paragraph">
           <p class="place__paragraph-text">Почти весь полуостров находится за Полярным 
-                кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый 
-                океан, прикидывающийся Баренцевым морем.</p>
+            кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый 
+            океан, прикидывающийся Баренцевым морем.</p>
           <p class="place__paragraph-text">Возможно, вы смотрели Звягинцева и даже 
-                слышали историю арктического фестиваля в Териберке. Возможно, слово 
-                «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. 
-                Возможно, вы не интересовались пронизывающей земную кору сверхглубокой 
-                скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть 
-                северное сияние начинает сбываться с билетом в Мурманск.</p>
+            слышали историю арктического фестиваля в Териберке. Возможно, слово 
+            «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. 
+            Возможно, вы не интересовались пронизывающей земную кору сверхглубокой 
+            скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть 
+            северное сияние начинает сбываться с билетом в Мурманск.</p>
         </div>
       </article>
       <article class="place">
-        <h3 class="place__title">Алтай</h3>
+        <h2 class="place__title">Алтай</h2>
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
@@ -107,17 +100,17 @@
         <img class="place__image" src="./images/place-altai.jpg" alt="Вид на сосновый лес с террасы">
         <div class="place__paragraph">
           <p class="place__paragraph-text">Алтай — одно из красивейших мест в России. 
-                В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, 
-                усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле 
-                окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
+            В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, 
+            усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле 
+            окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
           <p class="place__paragraph-text">Климат на Алтае умеренный, поэтому ехать сюда 
-                лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. 
-                По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся 
-                косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
+            лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. 
+            По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся 
+            косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
         </div>
       </article>
       <article class="place">
-        <h3 class="place__title">Зимний Байкал</h3>
+        <h2 class="place__title">Зимний Байкал</h2>
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
@@ -125,17 +118,17 @@
           <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Трещины на льду озера Байкал крупный план">
           <div class="place__paragraph">
             <p class="place__paragraph-text">Всем известен Байкал как крупнейшее озеро 
-                в мире. Многие также знают, что это самый большой источник пресной воды и 
-                одно из красивейших мест в России.</p>
+              мире. Многие также знают, что это самый большой источник пресной воды и 
+              одно из красивейших мест в России.</p>
             <p class="place__paragraph-text">Конечно, это всё так. Но Байкал ещё 
-                идеальное место для соревнований по скийорингу. Это такой вид спорта, 
-                когда лыжник привязывает себя к мотоциклу, и тандем старается 
-                развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале
-                 «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+              идеальное место для соревнований по скийорингу. Это такой вид спорта, 
+              когда лыжник привязывает себя к мотоциклу, и тандем старается 
+              развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале
+              «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
         </div>
       </article>
       <article class="place">
-        <h3 class="place__title">Карелия</h3>
+        <h2 class="place__title">Карелия</h2>
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
@@ -143,26 +136,26 @@
         <img class="place__image" src="./images/place-karelia.jpg" alt="Лес на берегу озера в Карелии">
         <div class="place__paragraph">
           <p class="place__paragraph-text">Сибирь заканчивается не на Урале, а в Карелии:
-                 образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато 
-                 здесь она вымахивает на 30 метров — леса карельских национальных парков 
-                 из-за непроходимых болот никогда не знали топора. Некоторым соснам уже 
-                 больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему 
-                 солнце раньше, чем увидал его Иван Грозный. В девственном лесу на 
-                 сотню километров не встретишь тропы. А на редких тропинках деревья 
-                в паре метров от земли помечены медвежьими когтями. Чтобы все знали, 
-                кто тут хозяин.</p>
+            образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато 
+            здесь она вымахивает на 30 метров — леса карельских национальных парков 
+            из-за непроходимых болот никогда не знали топора. Некоторым соснам уже 
+            больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему 
+            солнце раньше, чем увидал его Иван Грозный. В девственном лесу на 
+            сотню километров не встретишь тропы. А на редких тропинках деревья 
+            в паре метров от земли помечены медвежьими когтями. Чтобы все знали, 
+            кто тут хозяин.</p>
         </div>
       </article>
     </section>
     <section class="cover">
-      <div class="cover__container">
-        <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-          <h4 class="cover__title">До Байкала «на&nbsp;собаках»</h4>
-          <p class="cover__subtitle">По мотивам учебной темы о&nbsp;Транссибе&nbsp; — путешествие от столицы до Байкала на электричках.</p>
-        </a>
-      </div> 
+      <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+        <h3 class="cover__title">До Байкала «на&nbsp;собаках»</h3>
+        <p class="cover__subtitle">По мотивам учебной темы о&nbsp;Транссибе&nbsp; — путешествие от столицы до Байкала на электричках.</p>
+      </a>
     </section>
-    <footer class="footer">
+  </main>
+  <footer class="footer">
+    <nav>
       <ul class="footer__links">
         <li><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
         <li><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
@@ -170,8 +163,8 @@
         <li><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
         <li><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>         
       </ul>
-      <div class="footer__copyright">© 2022. Тамара Пашкова</div>
-    </footer>
-  </main>
+    </nav>
+    <p class="footer__copyright">© 2022. Тамара Пашкова</p>
+  </footer>
 </body>
 </html>
